--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>ToDo App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
